--- a/src/Components/Styles/home.module.css
+++ b/src/Components/Styles/home.module.css
@@ -1,84 +1,167 @@
-.homeContainer{
-    /* height: 100px; */
-    z-index: -1;
-    
+.homeContainer {
+  /* height: 100px; */
+  z-index: -1;
 }
 
-.bg_image{
-    background-image:url("https://wallpaperaccess.com/full/1338362.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 500px;
-    opacity: 0.9;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: auto;
-    gap: 1.5rem;
-    padding-top: 4.3rem;
-    padding-bottom: 4.3rem;
-    
-    position: relative;
-    z-index: -1;
+.bg_image {
+  background-image: url("https://wallpaperaccess.com/full/1338362.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  /* height: 500px; */
+  opacity: 0.9;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  /* padding: 4rem; */
+  margin: auto;
+  gap: 0;
+  padding-top: 4.3rem;
+  padding-bottom: 4.3rem;
+
+  /* position: relative; */
+  z-index: -1;
 }
-.leftDesp,.rightDesp{
-    border: 1px solid red;
-    width: 45%;
-    /* height: 300px; */
-    margin: auto;
-    background-color: #000000de;
-    color: white;
-    text-align: left;
+.leftDesp,
+.rightDesp {
+  /* border: 1px solid red; */
+  width: 65%;
+  /* height: 300px; */
+  margin: auto;
+  background-color: #000000de;
+  color: white;
+  padding: 4rem;
+  text-align: left;
+}
+.rightDesp {
+  width: 35%;
+  /* background-color: white; */
 }
 
 
-.typeWriter{
+.typeWriter {
+  display: flex;
+  gap: 0.5rem;
+  color: red;
+  justify-content: left;
+  align-items: center;
+}
+h1 + h1 {
+  margin: 2rem 0 1rem 0;
+}
+.port {
+  color: red;
+  font-weight: 700;
+  font-size: 2.5rem;
+}
+
+.Hello {
+  font-size: 2rem;
+  font-weight: 700;
+  margin: 3rem 0 2rem 0;
+}
+.I {
+  color: #fff;
+  font-size: 1.5rem;
+  margin: 1rem 0 1rem 0;
+}
+.writer {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+/* social media section */
+
+.connect {
+  /* border: 1px solid red; */
+  display: flex;
+  gap: 1.5rem;
+  margin: auto;
+  justify-content: left;
+  align-items: center;
+  z-index: 100;
+}
+.connect img {
+  width: 50px;
+}
+
+.myResContainer{
+  padding: 0.5rem 0rem;
+    width: 50%;
+    border-radius: 1rem;
+    text-align: center;
+    box-shadow: rgba(245, 245, 248, 0.25) 0px 30px 60px -12px inset, rgba(249, 248, 248, 0.3) 0px 18px 36px -18px inset;
+    /* margin: auto; */
+    margin-top: 2rem;
+    margin-left: 0;
+    background-color: rgba(0, 0, 0, 0.37);
+}
+.myRes{
+  color: red;
+}
+
+/* media Queries */
+@media screen and (min-width: 375px) and (max-width: 730px) {
+  .typeWriter {
     display: flex;
     gap: 0.5rem;
-    color: red;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
-    
-    
-}
-.port{
     color: red;
+  }
+  .myResContainer{
+
+    margin: auto;
+    margin-top: 2rem;
+  }
+
+  .leftDesp,
+  .rightDesp {
+    /* border: 1px solid red; */
+    width: 100%;
+    /* height: 300px; */
+    margin: auto;
+    color: white;
+    text-align: center;
+  }
+  .writer {
+    font-size: 1.2rem;
     font-weight: 700;
+  }
+  .connect {
+    justify-content: center;
+  }
 }
 
-.Hello{
-    font-size: 2rem;
-}
-.I{
-    color: #FFF;
-    font-size: 1.5rem;
-}
-.writer{
+@media screen and (max-width: 730px) {
+  .bg_image {
+    flex-direction: column;
+    text-align: left;
+  }
+  .leftDesp {
+    width: 90%;
+    padding: 2rem;
+  }
+  .rightDesp {
+    display: none;
+  }
+  .writer {
+    font-size: 1.2rem;
+    font-weight: 700;
+    /* margin: auto; */
+  }
+  .Hello {
     font-size: 1.5rem;
     font-weight: 700;
-}
-
-@media screen and  (max-width: 730px) {
-    .typeWriter{
-        display: flex;
-        gap: 0.5rem;
-        justify-content: center;
-        align-items: center;
-        color: red;
-    } 
- 
-    .leftDesp,.rightDesp{
-        border: 1px solid red;
-        width: 100%;
-        /* height: 300px; */
-        margin: auto;
-        color: white;
-        text-align: center;
-    }
-    .writer{
-        font-size: 2.2rem;
-        font-weight: 700;
-    }
+    /* margin: auto; */
+  }
+  .port {
+    /* margin: auto; */
+    font-size: 1.2rem;
+  }
+  .I{
+    font-size: 1.2rem;
+     
+  }
 }
