--- a/src/Components/Styles/sidebar.module.css
+++ b/src/Components/Styles/sidebar.module.css
@@ -1,75 +1,58 @@
-.menu{
-    display: none;
-    flex-direction:column ;
-    font-size: 1rem;
-    /* gap: ; */
-    justify-content: right;
-    align-items: center;
-    /* background-color: gray; */
-    color: #FFF;
-    /* margin-right: 2rem; */
-
+.menu {
+  display: none;
+  flex-direction: column;
+  font-size: 1rem;
+  justify-content: right;
+  align-items: center;
+  color: #fff;
+  margin-bottom: 2rem;
 }
-.menu ul li{
-    list-style: none;
-    padding: 0.4rem 1rem;
-    /* background-color: white; */
-    /* color: red; */
+.menu ul li {
+  list-style: none;
+  padding: 0.4rem 1rem;
+  
 }
 
-.menu ul li :hover{
-    background-color: white;
-    color: rgba(243, 2, 78, 0.676);
-    padding: 0.4rem 1rem;
-    border-radius: 0.2rem;
-
-}
-.btnRes {
-    text-align: right;
-    padding: 0.4rem 1rem;
-    /* border-radius: 0.6rem; */
-
-} 
-.btnRes :hover{
-    background-color: #FFF;
-    color: #000;
-    padding: 0.4rem 1rem;
-    border-radius: 0.6rem;
+.menu ul li :hover {
+  background-color: white;
+  color: rgba(243, 2, 2, 0.676);
+  padding: 0.4rem 1rem;
+  border-radius: 0.2rem;
 }
 
-.ham{
-    display: none;
+
+
+.ham {
+  display: none;
 }
-@media screen and  (max-width: 730px) {
-    .ulMenu{
-        display: flex;
-        flex-direction: column;
-    }
-    .menu{
-        display: block;
-        position: fixed;
-        top: 4.4rem;
-        right: 0;
-        /* padding-right: 2rem; */
-        /* padding-bottom: 2rem; */
-        background-color: rgba(243, 2, 78, 0.676);
-        border-bottom-left-radius: 1rem;
-        color: #FFF;
-        z-index: 12;
-        /* height: 100vh; */
-        width: 10rem;
-        text-align: right;
-    }
-    .ham{
-        display: block;
-        position: fixed;
-        top: 1.7rem;
-        right: 2rem;
-        color: #FFF;
-        z-index: 12;
-    }
-    .ham img{
-        /* background-color: #000; */
-        color: #FFF;
-    }
+@media screen and (max-width: 730px) {
+  .ulMenu {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+  }
+  .menu {
+    display: block;
+    position: fixed;
+    top: 4.4rem;
+    right: 0;
+    background-color: rgba(243, 2, 78, 0.676);
+    border-bottom-left-radius: 1rem;
+    color: #fff;
+    z-index: 12;
+    width: 10rem;
+    text-align: right;margin-bottom: 1rem;
+  }
+  .ham {
+    display: block;
+    position: fixed;
+    top: 1.7rem;
+    right: 2rem;
+    color: #fff;
+    z-index: 12;
+  }
+  .ham img {
+    /* background-color: #000; */
+    color: #fff;
+  }
 }
