updated classes ids

--- a/src/Components/Styles/Projects.module.css
+++ b/src/Components/Styles/Projects.module.css
@@ -30,7 +30,7 @@
   gap: 1.5rem;
 }
 
-.eachProject {
+.project_card {
   /* border: 1px solid black; */
   width: 45%;
   margin: auto;
@@ -52,11 +52,11 @@
   padding-bottom: 1rem;
 }
 
-.eachProject >h2{
+.project_card >h2{
     font-size: 1.5rem;
     font-weight: 700;
 }
-.eachProject >p{
+.project_card >p{
     font-size: 1rem;
     padding-bottom: 1rem;
     /* font-weight: 700; */
@@ -80,7 +80,7 @@
 /* media queries */
 @media screen  and (max-width: 700px) {
 
-    .eachProject {
+    .project_card {
         /* border: 1px solid black; */
         width: 80%;
         margin: auto;
