--- a/src/Components/Styles/home.module.css
+++ b/src/Components/Styles/home.module.css
@@ -88,7 +88,8 @@ h1 + h1 {
 
 .myResContainer{
   padding: 0.5rem 0rem;
-    width: 50%;
+    width: 250px;
+    color: white;
     border-radius: 1rem;
     text-align: center;
     box-shadow: rgba(245, 245, 248, 0.25) 0px 30px 60px -12px inset, rgba(249, 248, 248, 0.3) 0px 18px 36px -18px inset;
