--- a/src/Components/Styles/About.module.css
+++ b/src/Components/Styles/About.module.css
@@ -7,6 +7,9 @@
     z-index: -2;
     background-color: rgba(0, 0, 0, 0.874);
 }
+
+
+
 .abtContainer{
     /* border:1px solid blue; */
     width: 80%;
@@ -21,7 +24,9 @@
 .abtcard{
     /* border:1px solid black; */
     width: 50%;
+    
     margin: auto;
+    margin-bottom: 3rem;
 }
 
 .abtRight{
