--- a/src/Components/Styles/Projects.module.css
+++ b/src/Components/Styles/Projects.module.css
@@ -6,7 +6,7 @@
     margin-bottom: 5rem;
 }
 .projTitleSpan{
-    color: rgb(237, 18, 50);
+    color: rgba(244, 35, 67, 0.779);
     font-size: 3rem;
     text-align: center;
     font-weight: 700;
@@ -34,12 +34,13 @@
   /* border: 1px solid black; */
   width: 45%;
   margin: auto;
-  min-height: 500px;
+  height: 45rem;
   color: #FFF;
   box-shadow: rgba(20, 19, 19, 0.473) 0px 14px 28px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
   border-radius: 0.7rem;
   display: flex;
+  justify-content: center;
   padding: 2rem;
   flex-direction: column;
   background-color: rgba(15, 15, 15, 0.397);
@@ -66,24 +67,27 @@
 .btnDiv {
   display: flex;
   justify-content: space-evenly;
+  
 }
 
 .btn {
-  background-color: rgba(255, 0, 25, 0.815);
+  background-color: rgb(203, 45, 60);
   color: #fff;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
+ 
 }
 
 
 
 /* media queries */
-@media screen  and (max-width: 700px) {
+@media screen and (min-width: 375px) and (max-width: 700px) {
 
     .project_card {
         /* border: 1px solid black; */
         width: 80%;
         margin: auto;
+        height: 500px;
         box-shadow: rgba(0, 0, 0, 0.694) 0px 14px 28px,
           rgba(0, 0, 0, 0.22) 0px 10px 10px;
         border-radius: 0.7rem;
